# hdaw2

./: .gitignore  AGENTS.md  Cargo.toml  DEV_PLAN.md  GUI_LAYOUT_DETAILS.md  README.md  REFAC_PLAN.md  SPEC.md
docs/superpowers/specs/: 2026-05-31-audio-recording-design.md  2026-05-31-audio-routing-design.md  2026-06-01-effect-parameter-automation-design.md  2026-06-03-gui-audio-perf-design.md  2026-06-04-spsc-param-pipeline-design.md  2026-06-05-tiled-layout-design.md
src/: lib.rs  main.rs
src/app/: commands.rs  coordinator.rs  input.rs  mod.rs  prefs_io.rs  project_io.rs  project_service.rs  undo_service.rs
src/app/commands/: clip_ops.rs  instrument.rs  midi_ops.rs  mod.rs  pool.rs  routing.rs  track_ops.rs
src/app/undo/: commands.rs  mod.rs
src/audio/: automation_proc.rs  buffer.rs  clap_effect.rs  clap_host.rs  clap_instance.rs  clap_scanner.rs  engine.rs  midi_dispatch.rs  mixer.rs  mod.rs  param_ring.rs  process.rs  record.rs  stream.rs  transport.rs
src/audio/effects/: chorus.rs  compressor.rs  delay.rs  distortion.rs  dsp_effect.rs  eq.rs  flanger.rs  gain.rs  (+4 more)
src/dsp/: biquad.rs
src/project/: automation.rs  cc_event.rs  clip.rs  clip_handle.rs  marker.rs  midi_clip.rs  midi_import.rs  midi_note.rs  mod.rs  pool.rs  tempo_event.rs  track.rs
src/ui/: app_ui.rs  app_ui_dialogs.rs  audio_pool.rs  bottom_panel.rs  mixer_panel.rs  mod.rs  panels.rs  piano_roll.rs  piano_roll_state.rs  preferences.rs  preferences_state.rs  right_panel.rs  toolbar.rs
src/utils/: mod.rs  native_window.rs  waveform.rs
tests/: audio_tests.rs  midi_pipeline_test.rs
(+10 files in other folders)
