[package]
name = "hdaw"
version = "0.1.0"
edition = "2021"
description = "Hap's Digital Audio Workstation"

[dependencies]
eframe = "0.30"
egui = "0.30"
cpal = "0.15"
dasp = { version = "0.11", features = ["interpolate", "signal"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hound = "3.5"
egui-file-dialog = "0.8"
clack-host = "0.1"
clack-extensions = { version = "0.1", features = ["clack-host", "log", "params", "state", "audio-ports", "note-ports", "gui"] }
base64 = "0.22"

[profile.release]
lto = true
opt-level = 3
